@@ -24,6 +24,7 @@ Improvements
 
     ST-237 Simplify configuration process
     ST-223 Add option to wait for server to suspend or resume
+    ST-245 Visualize polling of status for long operations
 
 Fixed
 
